--- a/app/.gitignore
+++ b/app/.gitignore
@@ -23,6 +23,7 @@ static/debug_toolbar
 static/icon
 static/img
 static/rest_framework
+static
 
 ### Django.Python Stack ###
 # Byte-compiled / optimized / DLL files
