--- a/app/Pipfile
+++ b/app/Pipfile
@@ -10,6 +10,7 @@ django-debug-toolbar = "*"
 Django = "==3.2.3"
 djangorestframework = "*"
 djangorestframework-simplejwt = "*"
+django-cors-headers = "*"
 djoser = "*"
 django-filter = "*"
 gunicorn = "==20.0.4"
